--- a/src/main/resources/view/ConfigScreen.fxml
+++ b/src/main/resources/view/ConfigScreen.fxml
@@ -7,13 +7,46 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ConfigScreenView">
    <children>
-      <Label text="Difficulty" />
-      <ChoiceBox fx:id="difficultyChoiceBox" prefWidth="150.0" />
-      <Label text="Map Type" />
-      <ChoiceBox id="mapTypeChoiceBox" fx:id="mapTypeChoiceBox" prefWidth="150.0" />
+      <Label contentDisplay="BOTTOM" text="Difficulty">
+         <graphic>
+            <ChoiceBox fx:id="difficultyChoiceBox" prefWidth="150.0" />
+         </graphic>
+         <padding>
+            <Insets bottom="5.0" />
+         </padding></Label>
+      <Label contentDisplay="BOTTOM" text="Map Type">
+         <graphic>
+            <ChoiceBox id="mapTypeChoiceBox" fx:id="mapTypeChoiceBox" prefWidth="150.0" />
+         </graphic>
+         <padding>
+            <Insets bottom="5.0" top="5.0" />
+         </padding></Label>
+      <Label text="Player 1">
+         <padding>
+            <Insets top="5.0" />
+         </padding>
+      </Label>
+      <HBox prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Label contentDisplay="RIGHT" text="Name">
+               <graphic>
+                  <TextField fx:id="player1Name" />
+               </graphic>
+            </Label>
+            <Label contentDisplay="RIGHT" text="Race">
+               <graphic>
+                  <ChoiceBox fx:id="player1Race" prefWidth="150.0" />
+               </graphic>
+            </Label>
+            <Label contentDisplay="RIGHT" text="Color">
+               <graphic>
+                  <ChoiceBox fx:id="player1Color" prefWidth="150.0" />
+               </graphic>
+            </Label>
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
