--- a/src/main/java/view/ConfigScreen.fxml
+++ b/src/main/java/view/ConfigScreen.fxml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.effect.*?>
 <?import javafx.geometry.*?>
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presenter.ConfigScreenPresenter">
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presenter.ConfigScreenPresenter">
    <children>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Game Configuration">
+         <font>
+            <Font size="26.0" />
+         </font>
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+      </Text>
       <Label contentDisplay="BOTTOM" text="Difficulty">
          <graphic>
             <ChoiceBox fx:id="difficultyChoiceBox" prefWidth="150.0" />
@@ -23,58 +29,32 @@
          <padding>
             <Insets bottom="5.0" top="5.0" />
          </padding></Label>
-      <Label contentDisplay="BOTTOM" text="Player 1">
+      <fx:include fx:id="player1" source="PlayerSelect.fxml" />
+      <fx:include fx:id="player2" source="PlayerSelect.fxml" />
+      <fx:include fx:id="player3" source="PlayerSelect.fxml" />
+      <fx:include fx:id="player4" source="PlayerSelect.fxml" />
+      <HBox alignment="CENTER">
+         <children>
+            <Button fx:id="addPlayerButton" mnemonicParsing="false" onAction="#addPlayer" text="Add Player">
+               <HBox.margin>
+                  <Insets left="5.0" right="5.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="removePlayerButton" mnemonicParsing="false" onAction="#removePlayer" text="Remove Player">
+               <HBox.margin>
+                  <Insets left="5.0" right="5.0" />
+               </HBox.margin>
+            </Button>
+         </children>
          <padding>
             <Insets bottom="5.0" top="5.0" />
          </padding>
-         <graphic>
-            <HBox>
-               <children>
-                  <Label contentDisplay="RIGHT" text="Name">
-                     <graphic>
-                        <TextField fx:id="player1Name" />
-                     </graphic>
-                  </Label>
-                  <Label contentDisplay="RIGHT" text="Race">
-                     <graphic>
-                        <ChoiceBox fx:id="player1Race" prefWidth="150.0" />
-                     </graphic>
-                  </Label>
-                  <Label contentDisplay="RIGHT" text="Color">
-                     <graphic>
-                        <ChoiceBox fx:id="player1Color" prefWidth="150.0" />
-                     </graphic>
-                  </Label>
-               </children>
-            </HBox>
-         </graphic>
-      </Label>
-      <Label contentDisplay="BOTTOM" text="Player 2">
-         <padding>
+      </HBox>
+      <Button fx:id="doneButton" mnemonicParsing="false" onAction="#done" text="Done">
+         <VBox.margin>
             <Insets bottom="5.0" top="5.0" />
-         </padding>
-         <graphic>
-            <HBox>
-               <children>
-                  <Label contentDisplay="RIGHT" text="Name">
-                     <graphic>
-                        <TextField fx:id="player2Name" />
-                     </graphic>
-                  </Label>
-                  <Label contentDisplay="RIGHT" text="Race">
-                     <graphic>
-                        <ChoiceBox fx:id="player2Race" prefWidth="150.0" />
-                     </graphic>
-                  </Label>
-                  <Label contentDisplay="RIGHT" text="Color">
-                     <graphic>
-                        <ChoiceBox fx:id="player2Color" prefWidth="150.0" />
-                     </graphic>
-                  </Label>
-               </children>
-            </HBox>
-         </graphic>
-      </Label>
+         </VBox.margin>
+      </Button>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
