--- a/src/main/resources/view/Town.fxml
+++ b/src/main/resources/view/Town.fxml
@@ -26,7 +26,7 @@
             </ImageView>
             <ImageView id="land" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <image>
-                  <Image url="@../img/store.png" />
+                  <Image url="@../img/land.png" />
                </image>
             </ImageView>
             <ImageView id="sand" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
@@ -63,7 +63,7 @@
       </GridPane>
       <Pane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <ImageView fx:id="player" fitHeight="50.0" fitWidth="50.0" onKeyPressed="#move" pickOnBounds="true" preserveRatio="true" x="275.0" y="50.0">
+            <ImageView fx:id="player" fitHeight="50.0" fitWidth="50.0" focusTraversable="true" onKeyPressed="#move" pickOnBounds="true" preserveRatio="true" x="275.0" y="50.0">
                <image>
                   <Image url="@../img/human.png" />
                </image>
