--- a/src/main/resources/configscreen/playerselect/PlayerSelect.fxml
+++ b/src/main/resources/configscreen/playerselect/PlayerSelect.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.HBox?>
-<Label fx:id="playerNumberLabel" contentDisplay="BOTTOM" text="Player #" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presenter.PlayerSelectPresenter">
+<Label fx:id="playerNumberLabel" contentDisplay="BOTTOM" text="Player #" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="configscreen.playerselect.PlayerSelectPresenter">
    <graphic>
       <HBox>
          <children>
