--- a/src/main/resources/mule/world/town/Town.fxml
+++ b/src/main/resources/mule/world/town/Town.fxml
@@ -5,48 +5,48 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presenter.TownScreenPresenter">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mule.world.town.TownPresenter">
    <children>
       <GridPane id="townMap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
          <children>
             <ImageView id="pub" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
                <image>
-                  <Image url="@../img/pub.png" />
+                  <Image url="@pub.png" />
                </image>
             </ImageView>
             <ImageView id="store" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <image>
-                  <Image url="@../img/store.png" />
+                  <Image url="@store.png" />
                </image>
             </ImageView>
             <ImageView id="assay" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <image>
-                  <Image url="@../img/assay.png" />
+                  <Image url="@assay.png" />
                </image>
             </ImageView>
             <ImageView id="land" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <image>
-                  <Image url="@../img/land.png" />
+                  <Image url="@land.png" />
                </image>
             </ImageView>
             <ImageView id="sand" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../img/sand.png" />
+                  <Image url="@sand.png" />
                </image>
             </ImageView>
             <ImageView id="sand" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
                <image>
-                  <Image url="@../img/sand.png" />
+                  <Image url="@sand.png" />
                </image>
             </ImageView>
             <ImageView id="sand" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
                <image>
-                  <Image url="@../img/sand.png" />
+                  <Image url="@sand.png" />
                </image>
             </ImageView>
             <ImageView id="sand" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3">
                <image>
-                  <Image url="@../img/sand.png" />
+                  <Image url="@sand.png" />
                </image>
             </ImageView>
          </children>
@@ -65,7 +65,7 @@
          <children>
             <ImageView fx:id="player" fitHeight="50.0" fitWidth="50.0" focusTraversable="true" onKeyPressed="#move" pickOnBounds="true" preserveRatio="true" x="275.0" y="50.0">
                <image>
-                  <Image url="@../img/human.png" />
+                  <Image url="@human.png" />
                </image>
             </ImageView>
          </children>
