--- a/src/main/resources/mule/mainscreen/mainscreen.fxml
+++ b/src/main/resources/mule/mainscreen/mainscreen.fxml
@@ -5,16 +5,9 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mule.mainscreen.MainScreenPresenter">
+<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mule.mainscreen.MainScreenPresenter">
    <children>
       <Pane fx:id="mainContainer" prefHeight="500.0" prefWidth="900.0" />
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: pink;">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Menu/other stuff placeholder" textAlignment="CENTER">
-               <font>
-                  <Font size="27.0" />
-               </font>
-            </Text>
-         </children></HBox>
+      <fx:include source="statusbar/statusbar.fxml" />
    </children>
 </VBox>
