--- a/src/main/resources/mule/world/map/tile/tile.fxml
+++ b/src/main/resources/mule/world/map/tile/tile.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.layout.Pane?>
 
-
 <Pane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="100.0" styleClass="tile" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mule.world.map.tile.TilePresenter">
    <children>
       <Circle fx:id="ownerCircle" fill="#ffffff00" layoutX="88.0" layoutY="87.0" radius="5.0" stroke="TRANSPARENT" strokeType="INSIDE" styleClass="owner-circle" />
+      <Circle fx:id="playerCircle" fill="#ff1f1f00" layoutX="47.0" layoutY="51.0" radius="11.0" stroke="TRANSPARENT" strokeType="INSIDE" strokeWidth="0.0" />
    </children>
 </Pane>
