Implement money stuff
Add current player money to status bar. Also make buying property cost
money.

--- a/src/main/resources/mule/mainscreen/statusbar/statusbar.fxml
+++ b/src/main/resources/mule/mainscreen/statusbar/statusbar.fxml
@@ -6,7 +6,6 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mule.mainscreen.statusbar.StatusBarPresenter">
    <children>
       <Label contentDisplay="BOTTOM" text="Current Player:">
@@ -24,6 +23,11 @@
          <HBox.margin>
             <Insets left="5.0" right="5.0" />
          </HBox.margin>
+      </Label>
+      <Label contentDisplay="BOTTOM" text="Money:">
+         <graphic>
+            <Text fx:id="playerMoney" strokeType="OUTSIDE" strokeWidth="0.0" text="Placeholder" />
+         </graphic>
       </Label>
    </children>
    <padding>
