--- a/src/main/resources/mule/mainscreen/mainscreen.fxml
+++ b/src/main/resources/mule/mainscreen/mainscreen.fxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mule.mainscreen.MainScreenPresenter">
    <children>
       <Pane fx:id="mainContainer" prefHeight="500.0" prefWidth="900.0" />
