--- a/src/main/resources/mule/mainscreen/statusbar/statusbar.fxml
+++ b/src/main/resources/mule/mainscreen/statusbar/statusbar.fxml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+
 <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mule.mainscreen.statusbar.StatusBarPresenter">
    <children>
       <HBox fx:id="playerStats" prefHeight="100.0" />
       <FlowPane fx:id="lsBox" alignment="CENTER" columnHalignment="RIGHT" nodeOrientation="LEFT_TO_RIGHT" prefWidth="200.0">
          <children>
-            <Label text="Land Selection Phase" textAlignment="CENTER">
+            <Label fx:id="lsTitle" text="Land Selection Phase" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
@@ -33,5 +38,15 @@
             </Label>
          </children>
       </FlowPane>
+      <Label fx:id="nextTurnLabel" text="Click to start turn" textAlignment="CENTER">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="timeLeftLabel" contentDisplay="BOTTOM" text="Time Left:">
+         <graphic>
+            <Text fx:id="timeLeftText" strokeType="OUTSIDE" strokeWidth="0.0" text="Time Left" />
+         </graphic>
+      </Label>
    </children>
 </HBox>
