--- a/src/main/resources/mule/mainscreen/statusbar/playerstatus/playerstatus.fxml
+++ b/src/main/resources/mule/mainscreen/statusbar/playerstatus/playerstatus.fxml
@@ -2,13 +2,28 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.*?>
 <VBox alignment="CENTER" prefHeight="100.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mule.mainscreen.statusbar.playerstatus.PlayerStatusPresenter">
    <children>
       <Text fx:id="playerName" strokeType="OUTSIDE" strokeWidth="0.0" text="PlayerName" textAlignment="CENTER" />
       <Label contentDisplay="RIGHT" text="Money: ">
          <graphic>
             <Text fx:id="money" strokeType="OUTSIDE" strokeWidth="0.0" text="\$$$" />
+         </graphic>
+      </Label>
+      <Label contentDisplay="RIGHT" text="Food:">
+         <graphic>
+            <Text fx:id="food" strokeType="OUTSIDE" strokeWidth="0.0" text="\$$$" />
+         </graphic>
+      </Label>
+      <Label contentDisplay="RIGHT" text="Energy:">
+         <graphic>
+            <Text fx:id="energy" strokeType="OUTSIDE" strokeWidth="0.0" text="\$$$" />
+         </graphic>
+      </Label>
+      <Label contentDisplay="RIGHT" text="Ore:">
+         <graphic>
+            <Text fx:id="ore" strokeType="OUTSIDE" strokeWidth="0.0" text="\$$$" />
          </graphic>
       </Label>
    </children>
