--- a/src/main/resources/mule/mainscreen/statusbar/statusbar.fxml
+++ b/src/main/resources/mule/mainscreen/statusbar/statusbar.fxml
@@ -38,10 +38,25 @@
             </Label>
          </children>
       </FlowPane>
-      <Label fx:id="timeLeftLabel" contentDisplay="BOTTOM" text="Time Left:">
-         <graphic>
-            <Text fx:id="timeLeftText" strokeType="OUTSIDE" strokeWidth="0.0" text="Time Left" />
-         </graphic>
-      </Label>
+      <FlowPane fx:id="turnBox" alignment="CENTER">
+         <children>
+            <Label contentDisplay="BOTTOM" text="Time Left:">
+               <graphic>
+                  <Text fx:id="timeLeftText" strokeType="OUTSIDE" strokeWidth="0.0" text="Placeholder" />
+               </graphic>
+               <FlowPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </FlowPane.margin>
+            </Label>
+            <Label contentDisplay="BOTTOM" text="Current Player:">
+               <graphic>
+                  <Text fx:id="turnCurrentPlayer" strokeType="OUTSIDE" strokeWidth="0.0" text="Placeholder" />
+               </graphic>
+               <FlowPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </FlowPane.margin>
+            </Label>
+         </children>
+      </FlowPane>
    </children>
 </HBox>
