--- a/src/main/resources/mule/world/town/town.fxml
+++ b/src/main/resources/mule/world/town/town.fxml
@@ -69,5 +69,6 @@
             </ImageView>
          </children>
       </Pane>
+      <Pane fx:id="menuContainer" prefHeight="500.0" prefWidth="900.0" />
    </children>
 </Pane>
