--- a/src/main/resources/mule/configscreen/configscreen.fxml
+++ b/src/main/resources/mule/configscreen/configscreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Text?>
 <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mule.configscreen.ConfigScreenPresenter">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Game Configuration">
+      <Text onMouseClicked="#skip" strokeType="OUTSIDE" strokeWidth="0.0" text="Game Configuration">
          <font>
             <Font size="26.0" />
          </font>
@@ -46,7 +46,7 @@
             <Insets bottom="5.0" top="5.0" />
          </padding>
       </HBox>
-      <Button fx:id="doneButton" mnemonicParsing="false" onAction="#done" text="Done" />
+      <Button mnemonicParsing="false" onAction="#done" text="Done" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
