added database support in gamesaves.db in root

--- a/src/main/resources/mule/mainscreen/statusbar/statusbar.fxml
+++ b/src/main/resources/mule/mainscreen/statusbar/statusbar.fxml
@@ -50,6 +50,7 @@
                   <Insets left="5.0" right="5.0" />
                </FlowPane.margin>
             </Label>
+            <Button mnemonicParsing="false" onAction="#save" text="Save" />
          </children>
       </FlowPane>
    </children>
