--- a/src/main/resources/mule/configscreen/configscreen.fxml
+++ b/src/main/resources/mule/configscreen/configscreen.fxml
@@ -47,6 +47,7 @@
          </padding>
       </HBox>
       <Button mnemonicParsing="false" onAction="#done" text="Done" />
+      <Button mnemonicParsing="false" onAction="#load" text="Load" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
