Change the Town to use KeyHandler
Lots of code cleaning for input in TownPresenter. The original input
handling method didn't control focus properly, so when the save button
is added, the save button stole focus and movement broke. This fixes the
problem and massively increases code organization.

--- a/src/main/resources/mule/world/town/town.fxml
+++ b/src/main/resources/mule/world/town/town.fxml
@@ -60,7 +60,7 @@
       </GridPane>
       <Pane prefHeight="500.0" prefWidth="900.0">
          <children>
-            <ImageView fx:id="player" fitHeight="50.0" fitWidth="50.0" focusTraversable="true" onKeyPressed="#move" pickOnBounds="true" preserveRatio="true" x="275.0" y="50.0">
+            <ImageView fx:id="player" fitHeight="50.0" fitWidth="50.0" focusTraversable="true" pickOnBounds="true" preserveRatio="true" x="275.0" y="50.0">
                <image>
                   <Image url="@human.png" />
                </image>
